# ci-slingshot

./: .dockerignore  .gitignore  .gitmodules  .travis.yml  Dockerfile  README.md  dockerfile  sonar-project.properties
.github/workflows/: build.yml
cpp/: CMakeLists.txt
cpp/calculator/: CMakeLists.txt  Dummy.cpp
cpp/calculator/include/calculator/: Dummy.h
cpp/calculator/tests/: CMakeLists.txt  DummyTest.cpp
docker/: builder.Dockerfile  ci-dockerfile  sonar-scanner.Dockerfile  unit-test.Dockerfile
scripts/: analysis-stage.sh  build-docker-images.sh  build-stage.sh  docker_run_base.sh  sonarscan.sh  tests-stage.sh  tokencheck.sh  unit-test.sh
